tests/baselines/reference/ES5For-of12(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
ES5For-of12.ts(1,7): error TS2364: The left-hand side of an assignment expression must be a variable or a property access.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== ES5For-of12.ts (1 errors) ====
    for ([""] of [[""]]) { }
          ~~
!!! error TS2364: The left-hand side of an assignment expression must be a variable or a property access.